@@ -11,6 +11,11 @@ Package author: Andrei Salnikov
 Please describe any modifications that you made to the package in the
 reverse time order.
 
+Tag: V00-03-05
+2012-06-22 Andy Salnikov
+- EvrData.EventCodeV5: one member method was incorrectly named
+- regenerate whole thing from psddldata V00-03-04
+
 Tag: V00-03-04
 2012-06-03 Andy Salnikov
 - upgrading to pdsdata V03-07-07
